recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: identifier expected but ')' found.
    forward(100.);
                ^FourSquare:4: error: identifier expected but ')' found.
    left(90.);
            ^FourSquare:5: error: identifier expected but ')' found.
    forward(100.);
                ^FourSquare:6: error: identifier expected but ')' found.
    left(90.);
            ^FourSquare:7: error: identifier expected but ')' found.
    forward(100.);
                ^FourSquare:8: error: identifier expected but ')' found.
    left(100.);
             ^FourSquare:9: error: identifier expected but ')' found.
    forward(100.);
                ^FourSquare:14: error: Unmatched closing brace '}' ignored here
}
^