recursion.logo.square.FourSquare.scala.code
override def run() {
  for(i <- 1 to 4 ){
    forward(100.);
    left(90.);
    forward(100.);
    left(90.);
    forward(100.);
    left(100.);
    forward(100.);
    }
  }
}